fix spacing on images

--- a/assets/css/components/jamstack.scss
+++ b/assets/css/components/jamstack.scss
@@ -182,8 +182,8 @@
     margin: 0;
     padding: 0;
     display: block;
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
 
   .jamDesc__iframe {
